--- a/AzuraCastRecognition/templates/manual_detection.html
+++ b/AzuraCastRecognition/templates/manual_detection.html
@@ -115,13 +115,13 @@
                         <div class="row">
                             <!-- Simple Stats Widgets -->
                             <div class="col-sm-6 col-lg-6">
-                                <form action="page_forms_components.html" method="post" enctype="multipart/form-data" class="form-horizontal form-bordered" onsubmit="return false;">
-
+                                <form action="{% url 'manual_detection' %}" method="post" enctype="multipart/form-data" class="form-horizontal form-bordered">
+                                    {% csrf_token %}
                                     <div class="form-group">
                                         <label class="col-md-3 control-label"
                                                for="example-textarea-input">Song Details</label>
                                         <div class="col-md-9">
-                                            <textarea id="example-textarea-input" name="example-textarea-input"
+                                            <textarea id="example-textarea-input" name="song-details"
                                                           rows="7" class="form-control" placeholder="Description..">{{ song_details }}</textarea>
                                         </div>
                                     </div>
@@ -130,7 +130,7 @@
                                         <label class="col-md-3 control-label"
                                                for="example-textarea-input">Artist Details</label>
                                         <div class="col-md-9">
-                                            <textarea id="example-textarea-input" name="example-textarea-input"
+                                            <textarea id="example-textarea-input" name="artist-details"
                                                           rows="7" class="form-control" placeholder="Description..">{{ artist_details }}</textarea>
                                         </div>
                                     </div>
@@ -139,9 +139,13 @@
                                         <label class="col-md-3 control-label"
                                                for="example-textarea-input">Band Details</label>
                                         <div class="col-md-9">
-                                            <textarea id="example-textarea-input" name="example-textarea-input"
+                                            <textarea id="example-textarea-input" name="band-details"
                                                           rows="7" class="form-control" placeholder="Description..">{{ band_details }}</textarea>
                                         </div>
+                                    </div>
+                                    <div class="form-group text-center">
+                                        <input type="submit" value="Submit">
+                                        <button type="submit" value="Submit" class="btn-primary">Submit</button>
                                     </div>
                                 </form>
                             </div>
