--- a/AzuraCastRecognition/templates/manual_detection.html
+++ b/AzuraCastRecognition/templates/manual_detection.html
@@ -115,7 +115,7 @@
                         <div class="row">
                             <!-- Simple Stats Widgets -->
                             <div class="col-sm-6 col-lg-6">
-                                <form action="{% url 'manual_detection' %}" method="post" enctype="multipart/form-data" class="form-horizontal form-bordered">
+                                <form action="{% url 'preview_tweet' type='manual' %}" method="post" enctype="multipart/form-data" class="form-horizontal form-bordered">
                                     {% csrf_token %}
                                     <div class="form-group">
                                         <label class="col-md-3 control-label"
@@ -144,7 +144,6 @@
                                         </div>
                                     </div>
                                     <div class="form-group text-center">
-                                        <input type="submit" value="Submit">
                                         <button type="submit" value="Submit" class="btn-primary">Submit</button>
                                     </div>
                                 </form>
