add playing next

--- a/AzuraCastRecognition/templates/home.html
+++ b/AzuraCastRecognition/templates/home.html
@@ -139,6 +139,32 @@
                         </div>
                         <!-- END First Row -->
 
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="widget">
+                                    <div class="widget-image widget-image-xs">
+                                        <img src="{% static 'img/placeholders/photos/photo13@2x.jpg' %}" alt="image">
+                                        <div class="widget-image-content">
+                                            <h2 class="widget-heading text-light"><strong>Now Playing</strong></h2>
+                                            <h3 class="widget-heading text-light-op h4">{{ now_playing }}</h3>
+                                        </div>
+                                        <i class="gi gi-play"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="widget">
+                                    <div class="widget-image widget-image-xs">
+                                        <img src="{% static 'img/placeholders/photos/photo13@2x.jpg' %}" alt="image">
+                                        <div class="widget-image-content">
+                                            <h2 class="widget-heading text-light"><strong>Playing Next</strong></h2>
+                                            <h3 class="widget-heading text-light-op h4">{{ playing_next }}</h3>
+                                        </div>
+                                        <i class="gi gi-play"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- END Page Content -->
                 </div>
